# Vercel-votorua

./: DEPLOY.md  README.md  SETUP.md  auth_testing.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  supabase_schema.sql  tsconfig.json  vercel.json  vite.config.ts
.emergent/: emergent.yml
backend/: pyproject.toml  requirements.txt  server.py
backend/tests/: test_backend_api.py
backend/vitoria_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
emails/: order_confirmation.html  order_status_update.html  testimonial_reply.html  welcome.html
frontend/: .vercelignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/context/: AppContext.tsx  AuthContext.tsx
frontend/src/data/: products.ts
frontend/src/lib/: api.ts  supabase.ts  types.ts
memory/: PRD.md  test_credentials.md
public/: manifest.json
src/: App.tsx  index.css
src/components/feature/: BottomNav.tsx  CartDrawer.tsx  Navbar.tsx  OrderModal.tsx
src/context/: AppContext.tsx
src/pages/admin/: AdminPanel.tsx
src/pages/history/: HistoryPage.tsx
src/pages/home/: Home.tsx
src/pages/product/: ProductDetail.tsx
src/pages/profile/: ProfilePage.tsx
src/pages/prompt/: Prompt.tsx
src/pages/testimonials/: TestimonialDetail.tsx  TestimonialDetailPage.tsx  TestimonialsPage.tsx
supabase/migrations/: 20260419233808_ensure_admin_email_and_testimonials_rls.sql
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
(+30 files in other folders)
