[project]
name = "vitoria-backend"
version = "0.1.0"
description = "Vitória — FastAPI gatekeeper (Emergent Auth + Supabase)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "mangum==0.19.0",
    "emergentintegrations",
]

[tool.uv]
# Allow pulling from both PyPI and the private Emergent index
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "emergent"
url = "https://d33sy5i8bnduwe.cloudfront.net/simple/"
default = false
