[project]
name = "vitoria-backend"
version = "0.1.0"
description = "Vitória — FastAPI backend (Emergent Auth + Supabase)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "mangum==0.19.0",
]
